--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -27,22 +27,6 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../fonts/OpenSans-Medium.woff2') format('woff2');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/OpenSans-SemiBold.woff2') format('woff2');
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Open Sans';
   src: url('../fonts/OpenSans-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
